# fitness_trainer

./: .dockerignore  .env.example  .gitignore  3a68a0dc60254b81a96188f5d070e35c (1).tar  CLAUDE.md  Dockerfile  README.md  app.R  app.py  chat.R  docker-compose.yml  main.py  manifest.json  mock_plan.md  pyproject.toml  quick_chat.R  requirements.txt  write manifest.R
3a68a0dc60254b81a96188f5d070e35c/: app.R
3a68a0dc60254b81a96188f5d070e35c (1)/: manifest.json
rsconnect/shinyapps.io/ivan-lozo/: fitness_trainer.dcf
